Replace StackOnlyAttribute with IsByRefLikeAttribute
IsByRefLikeAttribute is the shipping version of the StackOnlyAttribute

[tfs-changeset: 1664170]

--- a/src/Runtime.Base/src/Runtime.Base.csproj
+++ b/src/Runtime.Base/src/Runtime.Base.csproj
@@ -31,7 +31,7 @@
     <Compile Include="System\Nullable.cs" />
     <Compile Include="System\Object.cs" />
     <Compile Include="System\Runtime\CachedInterfaceDispatch.cs" />
-    <Compile Include="System\Runtime\CompilerServices\StackOnlyAttribute.cs" />
+    <Compile Include="System\Runtime\CompilerServices\IsByRefLikeAttribute.cs" />
     <Compile Include="System\Runtime\DispatchResolve.cs" />
     <Compile Include="System\Runtime\GCStress.cs" />
   </ItemGroup>
