--- a/dir.traversal.targets
+++ b/dir.traversal.targets
@@ -55,19 +55,10 @@
       <DefaultRestoreAllTarget Condition="'$(DefaultRestoreAllTarget)'==''">Restore</DefaultRestoreAllTarget>
     </PropertyGroup>
 
-    <!-- To Serialize we use msbuild's batching functionality '%' to force it to batch all similar projects with the same identity 
-      however since the project names are unique it will essentially force each to run in its own batch -->
+    <!-- Forcing BuildInParallel=false. BuildInParallel=true clashes with nuget task parallel restore -->
     <MSBuild Targets="$(DefaultRestoreAllTarget)"
              Projects="@(Project)"
-             Condition="'$(SerializeProjects)'=='true' AND '%(Identity)' != ''"
-             Properties="RestoreAll=true"
-             ContinueOnError="ErrorAndContinue" />
-
-    <MSBuild Targets="$(DefaultRestoreAllTarget)"
-             Projects="@(Project)"
-             Condition="'$(SerializeProjects)'!='true'"
-             Properties="RestoreAll=true"
-             BuildInParallel="true"
+             BuildInParallel="false"
              ContinueOnError="ErrorAndContinue" />
 
     <!-- Given we ErrorAndContinue we need to propagate the error if the overall task failed -->
