Inline generic dictionary lookup
Avoid R2R helper calls in most of the generic dictionary lookups. I'm
deliberately not enabling this for:

* Generic lookups for static bases (these are more complicated as there
might be `.cctor` triggering involved - needs RyuJIT changes)
* Generic lookups for delegate creation (this is also pretty complicated
- needs RyuJIT changes)

--- a/src/ILCompiler.Compiler/src/ILCompiler.Compiler.csproj
+++ b/src/ILCompiler.Compiler/src/ILCompiler.Compiler.csproj
@@ -262,6 +262,7 @@
     <Compile Include="Compiler\DependencyAnalysis\Target_ARM\ARMReadyToRunGenericHelperNode.cs" />
     <Compile Include="Compiler\DependencyAnalysis\Target_ARM\ARMDebug.cs" />
     <Compile Include="Compiler\ExportedMethodsRootProvider.cs" />
+    <Compile Include="Compiler\GenericDictionaryLookup.cs" />
     <Compile Include="Compiler\IRootingServiceProvider.cs" />
     <Compile Include="Compiler\JitHelper.cs" />
     <Compile Include="Compiler\LazyGenericsPolicy.cs" />
