Initial implementation of .NETStandard 2.0 StackTrace / StackFrame API
This change supplies initial functional implementations of the .NET Standard 2.0 API's in StackTrace, StackFrame and StackFrameExtensions; it also includes runtime provisions for optional retrieval of IL offset and MethodBase when available in the AOT runtime.

[tfs-changeset: 1666008]

--- a/src/System.Private.CoreLib/src/System.Private.CoreLib.csproj
+++ b/src/System.Private.CoreLib/src/System.Private.CoreLib.csproj
@@ -240,6 +240,7 @@
     <Compile Include="System\Diagnostics\DebuggerAttributes.cs" />
     <Compile Include="System\Diagnostics\DebugAnnotations.cs" />
     <Compile Include="System\Diagnostics\StackFrame.cs" />
+    <Compile Include="System\Diagnostics\StackFrame.CoreRT.cs" />
     <Compile Include="System\Diagnostics\StackFrameExtensions.cs" />
     <Compile Include="System\Diagnostics\StackTrace.cs" />
     <Compile Include="System\Diagnostics\Tracing\EventSource_CoreRT.cs" />
