Make metadata collections no longer implement generic IReadOnlyCollection
This has a positive size on disk impact since generic IEnumerable and IEnumerator interfaces come with a bunch of costs. Low level metadata APIs don't have to be fancy. This also removes a bunch of boxing as an added bonus.

[tfs-changeset: 1666112]

--- a/src/System.Private.Reflection.Metadata/tests/System.Private.Reflection.Metadata.Tests.csproj
+++ b/src/System.Private.Reflection.Metadata/tests/System.Private.Reflection.Metadata.Tests.csproj
@@ -45,6 +45,7 @@
     <Compile Include="..\..\Common\src\TypeSystem\Common\TypeHashingAlgorithms.cs">
       <Link>TypeHashingAlgorithms.cs</Link>
     </Compile>
+    <Compile Include="CollectionExtensions.cs" />
     <Compile Include="HashCodeTests.cs" />
     <Compile Include="RoundTripTests.cs" />
   </ItemGroup>
