--- a/src/System.Private.CoreLib/src/System.Private.CoreLib.csproj
+++ b/src/System.Private.CoreLib/src/System.Private.CoreLib.csproj
@@ -180,6 +180,7 @@
     <Compile Include="System\Activator.cs" />
     <Compile Include="System\AggregateException.cs" />
     <Compile Include="System\AppContext.cs" />
+    <Compile Include="System\AppContextConfigHelper.cs" />
     <Compile Include="System\AppContextDefaultValues.cs" />
     <Compile Include="System\ArgIterator.cs" />
     <Compile Include="System\ArraySegment.cs" />
